fix: set .env file default for production

--- a/YCAI/.env
+++ b/YCAI/.env
@@ -1,10 +1,10 @@
 # bundle env
-BUNDLE_TARGET=chrome
 BUNDLE_ENABLE_NOTIFY=false
+BUNDLE_TARGET=chrome
 
 # app env
-PUBLIC_URL=http://localhost:3000
-API_URL=http://localhost:9000/api
-WEB_URL=http://localhost:3000
-DATA_DONATION_FLUSH_INTERVAL=4000
+PUBLIC_URL=https://studio.youchoose.ai
+API_URL=https://studio.youchoose.ai/api
+WEB_URL=https://youchoose.ai
+DATA_DONATION_FLUSH_INTERVAL=10000
 DEBUG=@yttrex:*
