--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -20,9 +20,9 @@
     "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "tsc --build && webpack",
     "watch:ext": "webpack -c webpack.extension.config.ts -w",
-    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env.production yarn watch:ext",
+    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env yarn watch:ext",
     "watch": "webpack serve",
-    "watch:prod": "DOTENV_CONFIG_PATH=.env.production yarn watch",
+    "watch:prod": "DOTENV_CONFIG_PATH=.env yarn watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
     "prepack": "yarn build"
