--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -41,6 +41,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.24.0",
     "csv-parse": "^4.16.3",
+    "csv-stringify": "^6.0.5",
     "debug": "^4.3.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
