chore: e2e test in CI with jest-dev-server

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -16,6 +16,11 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+    services:
+      mongo-db:
+        image: mongo:4.2
+        ports:
+          - 27017:27017
 
     steps:
       - uses: actions/checkout@v2
