--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^8.6.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
+    "jest-dev-server": "^6.0.3",
     "lint-staged": "^12.1.5",
     "prettier": "^2.5.1",
     "release-it": "^14.12.1",
