fix: dockerfile for electron-builder compatible with node 16 and windows

--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "tk:ext": "yarn workspace tktrex",
     "ycai": "yarn workspace @trex/ycai",
     "lint-staged": "lint-staged",
+    "docker-build": "scripts/build.sh",
     "postinstall": "husky install",
-    "release-it-after-bump": "sh ./scripts/release-it-after-bump.sh"
+    "release-it-after-bump": "scripts/release-it-after-bump.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
