ci: produce only a 'prelease' in beta flow

--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # run: yarn release-it --ci --preRelease
         run: |
           git config --global user.email "team@tracking.exposed"
           git config --global user.name "Team - Tracking Exposed"
-          yarn release-it premajor --ci --preReleaseId=beta --github.preRelease=true
+          yarn release-it --ci --preRelease
