fix: ycai workspace name

--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "YCAI",
+  "name": "@trex/ycai",
   "version": "1.11.0-beta.2",
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
