--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardoni",
-  "version": "1.9.2",
+  "version": "2.0.0-beta.0",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
     "clean": "rm -rf build dist",
