--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@trex/shared",
   "description": "Shared types definitions needed by @trex services",
-  "version": "0.1.0",
+  "version": "2.0.0-beta.0",
   "scripts": {
     "clean": "rm -rf ./build",
     "tsc": "tsc",
