--- a/services/tktrex/backend/package.json
+++ b/services/tktrex/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tktrex-backend",
-  "version": "0.2.2",
+  "version": "2.0.0-beta.0",
   "packageManager": "yarn@3.1.1",
   "description": "tiktok.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
