--- a/services/tktrex/methodology/package.json
+++ b/services/tktrex/methodology/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tktrex-guardoni",
-  "version": "0.2.3",
+  "version": "2.0.0-beta.0",
   "packageManager": "yarn@3.1.1",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
