ci: build electron-builder docker image before guardoni dist

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -58,4 +58,6 @@ jobs:
         run: yarn guardoni pkg
 
       - name: Dist
-        run: yarn guardoni dist:all
+        run: |
+          yarn docker-build
+          yarn guardoni dist:all
