--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tk:ext": "yarn workspace tktrex",
     "ycai": "yarn workspace @trex/ycai",
     "lint-staged": "lint-staged",
-    "docker-build": "scripts/build.sh",
+    "docker-build": "scripts/docker-build.sh",
     "postinstall": "husky install",
     "release-it-after-bump": "scripts/release-it-after-bump.sh"
   },
