--- a/YCAI/.env
+++ b/YCAI/.env
@@ -7,4 +7,4 @@ PUBLIC_URL=https://studio.youchoose.ai
 API_URL=https://api.youchoose.ai/api
 WEB_URL=https://youchoose.ai
 DATA_DONATION_FLUSH_INTERVAL=10000
-DEBUG=@yttrex:*
+DEBUG=@YCAI:*
