chore: release-it after bump hook

--- a/.github/workflows/taboule_pull_request.yml
+++ b/.github/workflows/taboule_pull_request.yml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Build Taboule
         run: yarn build
+
+      - name: Release it after dump
+        run: yarn release-it-after-dump
