chore: trigger the ci

--- a/.github/workflows/taboule_pull_request.yml
+++ b/.github/workflows/taboule_pull_request.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Build Taboule
         run: yarn build
 
-      - name: Release it after dump
+      - name: Release-it after dump
         run: yarn release-it-after-dump
