--- a/YCAI/.env
+++ b/YCAI/.env
@@ -4,7 +4,7 @@ BUNDLE_TARGET=chrome
 
 # app env
 PUBLIC_URL=https://studio.youchoose.ai
-API_URL=https://studio.youchoose.ai/api
+API_URL=https://api.youchoose.ai/api
 WEB_URL=https://youchoose.ai
 DATA_DONATION_FLUSH_INTERVAL=10000
 DEBUG=@yttrex:*
