--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -34,3 +34,18 @@ jobs:
           git config --global user.email "team@tracking.exposed"
           git config --global user.name "Team - Tracking Exposed"
           yarn release-it --ci --preRelease
+
+      - name: Build Dashboard
+        env:
+          DOTENV_CONFIG_PATH: .env.beta
+        run: yarn ycai build
+
+      - name: Deploy YCAI Dashboard
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avzr --delete
+          path: ./YCAI/build/dashboard/
+          remote_path: ~/beta-studio/
+          remote_host: ${{ secrets.YCAI_BETA_DEPLOY_HOST }}
+          remote_user: ${{ secrets.YCAI_BETA_DEPLOY_USER }}
+          remote_key: ${{ secrets.YCAI_BETA_DEPLOY_KEY }}
