--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -45,7 +45,19 @@ jobs:
         run: yarn build:ext
 
       - name: Build dashboard
+        env:
+          PUBLIC_URL: https://staging.studio.youchoose.ai
         run: yarn build
 
       - name: Test
         run: yarn test
+
+      - name: Deploy YCAI Dashboard
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avzr --delete
+          path: ./YCAI/build/dashboard/
+          remote_path: ~/staging-studio/
+          remote_host: ${{ secrets.YCAI_DAILY_DEPLOY_HOST }}
+          remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
+          remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
