fix: docker permissions during release flow

--- a/docker/electron-builder/Dockerfile
+++ b/docker/electron-builder/Dockerfile
@@ -22,9 +22,13 @@ RUN dpkg --add-architecture i386 && \
 
 RUN curl -L https://github.com/electron-userland/electron-builder-binaries/releases/download/wine-2.0.3-mac-10.13/wine-home.zip > /tmp/wine-home.zip && unzip /tmp/wine-home.zip -d /root/.wine && unlink /tmp/wine-home.zip
 
-RUN addgroup --gid $GROUP_ID user
-RUN adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID user
-USER user
+# RUN addgroup --gid $GROUP_ID user
+# RUN adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID user
+
+# RUN chown -R $USER_ID:$GROUP_ID /project
+# RUN exec runuser -u $USER_ID "$@"
+
+# USER user
 
 ENV WINEDEBUG -all,err+all
 ENV WINEDLLOVERRIDES winemenubuilder.exe=d
