fix: guardoni dist:all script

--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -56,3 +56,6 @@ jobs:
 
       - name: Package
         run: yarn guardoni pkg
+
+      - name: Release-it after bump
+        run: yarn release-it --preRelease --ci --github.preRelease=true
