--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tktrex",
-  "version": "2.0.0-beta.2",
+  "version": "1.11.0",
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "build": "tsc --build && rm -rf dist && DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
