feat: parsing POC

--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -41,6 +41,7 @@
     "fp-ts": "^2.11.7",
     "io-ts": "^2.2.16",
     "jest": "^27.4.7",
+    "linkedom": "^0.13.2",
     "node-fetch": "^2.6.5",
     "pouchdb": "^7.2.2",
     "puppeteer": "^13.1.1",
