refactor: trex logging (#325)

--- a/YCAI/.env.beta
+++ b/YCAI/.env.beta
@@ -7,4 +7,4 @@ PUBLIC_URL=https://beta.studio.youchoose.ai
 API_URL=https://api.youchoose.ai/api
 WEB_URL=https://youchoose.ai
 DATA_DONATION_FLUSH_INTERVAL=10000
-DEBUG=@yttrex:*
+DEBUG=@trex:*:info,@YCAI:*:info,@YCAI:*:error
