--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -4,7 +4,7 @@
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
     "clean": "rm -rf build dist",
-    "pkg": "pkg ./package.json && sh ./scripts/post-compile.sh",
+    "pkg": "sh scripts/pkg.sh",
     "lint": "eslint ./src/**",
     "format": "prettier -w ./src",
     "test": "jest",
