--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -3,9 +3,9 @@ name: Backend - Pull Request
 on:
   pull_request:
     branches:
-      - master
       - beta
       - daily
+      - feat/**
     paths:
       - "packages/shared/**"
       - "backend/**"
