--- a/extension/package.json
+++ b/extension/package.json
@@ -23,14 +23,14 @@
   },
   "devDependencies": {
     "@types/mini-css-extract-plugin": "^2.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^9.1.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^6.5.1",
-    "dotenv": "^14.3.0",
-    "eslint": "^8.7.0",
+    "css-loader": "^6.6.0",
+    "dotenv": "^14.3.2",
+    "eslint": "^8.8.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^5.2.0",
@@ -44,9 +44,9 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.67.0",
+    "webpack": "^5.68.0",
     "webpack-combine-loaders": "^2.0.4",
-    "webpack-dev-server": "^4.7.3",
+    "webpack-dev-server": "^4.7.4",
     "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
@@ -56,7 +56,8 @@
     "bs58": "^3.1.0",
     "cheerio": "^0.22.0",
     "classnames": "^2.3.1",
-    "html2canvas": "^1.4.0",
+    "create-react-class": "^15.7.0",
+    "html2canvas": "^1.4.1",
     "immutability-helper": "^2.9.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
