ci: run all tests in daily and beta flows

--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Test project
+        run: yarn test
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
