--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Test project
+        run: yarn test
+
       - name: Build Dashboard
         env:
           DOTENV_CONFIG_PATH: .env.beta
