--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -5,9 +5,9 @@
     "composite": true,
     "lib": ["ESNext", "DOM"],
     "typeRoots": ["../../node_modules/@types", "./node_modules/@types"],
-    "outDir": "./build",
-    "baseUrl": "./",
-    "rootDir": "./src",
+    "outDir": "../../build/ts",
+    "baseUrl": "../../",
+    "rootDir": "../../",
     "allowJs": true,
     "tsBuildInfoFile": "./build/.tsbuildinfo",
     "esModuleInterop": true,
