--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -11,6 +11,11 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+    services:
+      mongo-db:
+        image: mongo:4.2
+        ports:
+          - 27017:27017
     steps:
       - name: Checkout
         uses: actions/checkout@v2
