ci(yttrex): test check-ts-references

--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install node_modules
         run: yarn
 
+      - name: Check TS references
+        run: yarn check-ts-references --check
+
       - name: Lint code
         run: yarn backend lint
 
