--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Test project
-        run: yarn test
+      # - name: Test project
+      #   run: yarn test
 
       - name: Build Dashboard
         env:
