--- a/config/typescript/tsconfig.base.json
+++ b/config/typescript/tsconfig.base.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "allowJs": true,
     "noEmit": false,
+    "composite": true,
+    "strict": false,
+    "esModuleInterop": true,
+    "noUnusedLocals": true,
+    "resolveJsonModule": true,
+    "lib": ["ESNext", "DOM"],
     "paths": {
-      "@trex/shared": ["packages/shared"],
-      "@trex/taboule": ["packages/taboule"]
+      "@trex/shared/*": ["packages/shared/src/*"],
+      "@trex/taboule/*": ["packages/taboule/src/*"]
     }
   }
 }
