--- a/packages/taboule/tsconfig.json
+++ b/packages/taboule/tsconfig.json
@@ -3,14 +3,12 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "outDir": "build",
+    "rootDir": "../../",
+    "baseUrl": "../../",
+    "outDir": "../../build/ts",
     "target": "es5",
     "jsx": "react",
     "noEmit": false,
-    "allowJs": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "noUnusedLocals": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
@@ -19,30 +17,24 @@
     "lib": ["dom", "ESNext"],
     "typeRoots": [
       "../../node_modules/@types",
-      "../../shared/node_modules/@types",
+      "../shared/node_modules/@types",
       "./node_modules/@types",
       "./typings"
     ],
-    "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "Node",
-    "isolatedModules": true,
-    "paths": {
-      "@trex/shared/*": ["../../shared/src/*"]
-    }
+    "isolatedModules": true
   },
 
-  "include": ["./src", "./typings"],
+  "include": ["./src"],
   "exclude": ["build", "node_modules"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
     }
   },
-  "references": [
-    {
-      "path": "../shared"
-    }
-  ]
+  "references": [{
+    "path": "../shared"
+  }]
 }
