--- a/config/typescript/project-references.tsconfig.json
+++ b/config/typescript/project-references.tsconfig.json
@@ -2,5 +2,7 @@
   "extends": "./tsconfig.base.json",
   "files": [],
   "include": [],
-  "references": [{ "path": "../../packages" }]
+  "references": [{
+    "path": "../../packages"
+  }]
 }
