--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,24 @@
 {
-  "extends": "./config/typescript/project-references.tsconfig.json",
+  "extends": "./config/typescript/tsconfig.base.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "noEmit": true,
+    "jsx": "react",
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./packages/shared/node_modules/@types",
+      "./backend/node_modules/@types"
+    ]
+  },
   "include": [
     "./config/typescript/**/*",
-    "./packages/**/**/src/*",
+    "./packages/shared/**/*",
+    "./packages/taboule/**/*",
     "./backend/**/*",
-    "./guardoni/src/*",
+    "./extension/src/**/*",
+    "./guardoni/src/**/*",
+    "./YCAI/src/**/*"
   ],
-  "exclude": ["**/node_modules/*", "**/build/*"]
+  "exclude": ["**/node_modules/*", "**/jest.config.js", "**/webpack.config.ts"]
 }
