--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -58,4 +58,7 @@ jobs:
         run: yarn guardoni pkg
 
       - name: Release-it after bump
-        run: yarn release-it --preRelease --ci --github.preRelease=true
+        run: |
+          git config --global user.email "team@tracking.exposed"
+          git config --global user.name "Team - Tracking Exposed"
+          yarn release-it --preRelease --ci --preReleaseId=alpha --github.preRelease=true
