--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../config/typescript/tsconfig.base.json",
   "compilerOptions": {
     "module": "esnext",
     "target": "es5",
@@ -17,18 +17,17 @@
     "lib": ["dom", "ESNext"],
     "typeRoots": [
       "../node_modules/@types",
-      "../shared/node_modules/@types",
+      "../packages/shared/node_modules/@types",
       "./node_modules/@types",
       "./typings"
     ],
-    "baseUrl": "./src",
+    "rootDir": "../",
+    "baseUrl": "../",
+    "outDir": "../build/ts",
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "Node",
-    "isolatedModules": true,
-    "paths": {
-      "@trex/shared/*": ["../../packages/shared/src/*"]
-    }
+    "isolatedModules": true
   },
   "references": [
     {
