--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
   "exclude": [
     "**/node_modules/*",
     "**/build/*",
+    "**/jest.base.config.js",
     "**/jest.config.js",
     "**/webpack*.ts",
     "**/webpack*.js"
