--- a/extension/package.json
+++ b/extension/package.json
@@ -42,6 +42,7 @@
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.67.0",
     "webpack-combine-loaders": "^2.0.4",
