--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -36,7 +36,7 @@
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-test-renderer": "^17.0.1",
     "@types/swagger-ui": "^3.52.0",
