--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -67,7 +67,7 @@
     "@types/lodash": "^4.14.178",
     "@types/nconf": "^0.10.1",
     "@types/prettier": "^2.4.3",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-node-externals": "^2.5.3",
     "@types/yargs": "^17.0.8",
