--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@types/node": "^16.11.22",
     "@types/prettier": "^2.4.3",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
