--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -28,7 +28,7 @@
     "@types/debug": "^4.1.7",
     "@types/jquery": "^3.5.13",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
