--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -110,7 +110,8 @@
       "experiments/.keep",
       "static/index.html",
       "config/default.json",
-      "profiles/.keep"
+      "profiles/.keep",
+      "package.json"
     ],
     "targets": [
       "node16-linux-x64",
