feat: app is bundled by webpack

--- a/services/tktrex/automation/.vscode/settings.json
+++ b/services/tktrex/automation/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "jest.jestCommandLine": "yarn test"
+  "jest.jestCommandLine": "yarn test",
+  "cSpell.ignoreWords": ["unlazy"],
+  "cSpell.words": ["linkedom"]
 }
