--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -2,10 +2,14 @@
   "name": "@trex/tt-automation",
   "version": "0.2.5",
   "packageManager": "yarn@3.1.1",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
-    "build": "NODE_ENV=production webpack",
+    "build": "webpack",
     "clean": "rm -Rf dist",
-    "automate": "ts-node ./src/index.ts",
+    "automate:dev": "ts-node ./src/index.ts",
+    "automate": "node dist/index.js",
     "test": "jest --verbose",
     "tdd": "jest --watch --verbose",
     "tmp": "yarn automate run /home/djfm/work/French\\ Elections/automation-test"
@@ -24,26 +28,32 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "node-loader": "^2.0.0",
+    "string-replace-loader": "^3.1.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
+    "unlazy-loader": "^0.1.3",
+    "webpack": "^5.68.0",
+    "webpack-ci": "^1.0.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "@types/jest": "^27.4.0",
-    "@types/pouchdb": "^6.4.0",
+    "@types/pouchdb-node": "^6.1.4",
     "@types/puppeteer": "^5.4.4",
     "@types/yaml": "^1.9.7",
+    "canvas": "^2.9.0",
     "csv": "^6.0.5",
     "fp-ts": "^2.11.7",
     "io-ts": "^2.2.16",
     "jest": "^27.4.7",
+    "leveldown": "^6.1.0",
     "linkedom": "^0.13.2",
     "node-fetch": "^2.6.5",
-    "pouchdb": "^7.2.2",
+    "pouchdb-node": "^7.2.2",
     "puppeteer": "^13.1.1",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
