feat: big db refactoring

--- a/services/tktrex/automation/.vscode/settings.json
+++ b/services/tktrex/automation/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "jest.jestCommandLine": "yarn test",
   "cSpell.ignoreWords": ["unlazy"],
-  "cSpell.words": ["linkedom"]
+  "cSpell.words": [
+    "guardoni",
+    "linkedom"
+  ]
 }
