--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -14,6 +14,7 @@
     "start": "electron .",
     "pack": "electron-builder build --dir",
     "dist:linux": "electron-builder build -l",
+    "dist:mac": "electron-builder build -m",
     "dist:windows": "electron-builder build -w",
     "dist:all": "scripts/dist-all.sh",
     "postinstall": "electron-builder install-app-deps",
@@ -45,7 +46,7 @@
     "csv-stringify": "^6.0.5",
     "debug": "^4.3.3",
     "electron-debug": "^3.2.0",
-    "electron-log": "^4.4.5",
+    "electron-log": "^4.4.6",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "fp-ts": "^2.11.8",
@@ -77,7 +78,7 @@
     "chalk": "^5.0.0",
     "electron": "16.0.8",
     "electron-builder": "^22.14.13",
-    "electron-reloader": "^1.2.1",
+    "electron-reloader": "^1.2.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -110,7 +111,8 @@
       "experiments/.keep",
       "static/index.html",
       "config/default.json",
-      "profiles/.keep"
+      "profiles/.keep",
+      "package.json"
     ],
     "targets": [
       "node16-linux-x64",
